--- a/video/index.html
+++ b/video/index.html
@@ -5,7 +5,7 @@
     <title>VIDEO AR</title>
 
   <!-- AR.js by @jerome_etienne - github: https://github.com/jeromeetienne/ar.js - info: https://medium.com/arjs/augmented-reality-in-10-lines-of-html-4e193ea9fdbf -->
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <!-- <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script> -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 
@@ -55,7 +55,7 @@ if(this.el.object3D.visible == true){
     </a-assets>
 
     <a-marker id="memarker" preset="hiro" vidhandler>
-      <a-plane position='0 2 -1' scale="2 2 2" width="2" rotation="-90 0 0" material='transparent:true;opacity: 0.9;src:#vid'></a-plane>
+      <a-plane position='0 1 -1' scale="2 2 2" width="2" rotation="-90 0 0" material='transparent:true;opacity: 0.9;src:#vid'></a-plane>
     </a-marker>
 
   </a-scene>
