--- a/Marker/index.html
+++ b/Marker/index.html
@@ -8,14 +8,14 @@
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
 
-    <a-marker preset='custom' type='pattern' url='assets/pattern-marker.patt'>
+    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="hiro">
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/gameboy/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
