--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,14 +1,14 @@
 <html>
 
 <head>
-  <title>b</title>
+  <title>aaa</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <body style="margin : 0px; overflow: hidden;">
   <a-scene embedded arjs>
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
+    <!-- <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="hiro">
@@ -16,7 +16,18 @@
     </a-marker>
     <a-marker preset="kanji">
       <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf"></a-entity>
+    </a-marker> -->
+
+    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/old_telephone/scene.gltf"></a-entity>
     </a-marker>
+    <a-marker preset="hiro">
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/pacman/scene.gltf"></a-entity>
+    </a-marker>
+    <a-marker preset="kanji">
+      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/retro_camera/scene.gltf"></a-entity>
+    </a-marker>
+
     <a-entity camera></a-entity>
   </a-scene>
 </body>
