--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>aaa</title>
+  <title>aa</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -20,13 +20,13 @@
     </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 -1" scale="0.01 0.01 0.01" gltf-model="assets/old_telephone/scene.gltf"></a-entity>
+      <a-entity position="0 0 -1" scale="0.1 0.1 0.1" gltf-model="assets/old_telephone/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="hiro">
-      <a-entity position="0 0 -1" scale="0.01 0.01 0.01" gltf-model="assets/pacman/scene.gltf"></a-entity>
+      <a-entity position="0 0 -1" scale="0.1 0.1 0.1" gltf-model="assets/pacman/scene.gltf"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="2 2 2" gltf-model="assets/retro_camera/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/retro_camera/scene.gltf"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
