--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,13 +1,19 @@
 <html>
 
 <head>
-  <title>aa</title>
+  <title>V</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
+
 <body style="margin : 0px; overflow: hidden;">
-  <a-scene embedded arjs>
+  <a-scene  arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+  embedded
+  renderer="logarithmicDepthBuffer: true;"
+  vr-mode-ui="enabled: false"
+  gesture-detector
+  id="scene">
 
     <!-- <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
@@ -20,13 +26,13 @@
     </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.09; maxScale: 5"></a-entity>
     </a-marker>
     <a-marker preset="hiro">
-      <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="assets/pacman/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.009 0.009 0.009" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.0005; maxScale: 2"></a-entity>
     </a-marker>
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 5"></a-entity>
     </a-marker>
 
     <a-entity camera></a-entity>
