--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>V</title>
+  <title>A</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -25,15 +25,28 @@
       <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf"></a-entity>
     </a-marker> -->
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 3"></a-entity>
-    </a-marker>
+    <!-- <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
+      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+    </a-marker> -->
     <a-marker preset="hiro">
       <a-entity position="0 0 0" scale="0.01 0.01 0.01" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.001; maxScale: 5"></a-entity>
     </a-marker>
-    <a-marker preset="kanji">
+
+    <!-- <a-marker preset="kanji">
       <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
+    </a-marker> -->
+
+    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
+      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/night/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
+
+
+
+    <a-marker preset="kanji">
+      <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
+    </a-marker>
+
+
 
     <a-entity camera></a-entity>
   </a-scene>
