--- a/Marker/index.html
+++ b/Marker/index.html
@@ -8,10 +8,10 @@
 <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 
 <body style="margin : 0px; overflow: hidden;">
-  <a-scene  arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
+  <a-scene  arjs
   embedded
   renderer="logarithmicDepthBuffer: true;"
-  vr-mode-ui="enabled: false"
+  vr-mode-ui="enabled: true"
   gesture-detector
   id="scene">
 
@@ -29,7 +29,7 @@
       <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker> -->
     <a-marker preset="hiro">
-      <a-entity position="0 0 0" scale="0.01 0.01 0.01" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.001; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="0.005 0.005 0.005" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.001; maxScale: 5"></a-entity>
     </a-marker>
 
     <!-- <a-marker preset="kanji">
@@ -37,13 +37,13 @@
     </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/night/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/night/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
 
 
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
     </a-marker>
 
 
