--- a/Marker/index.html
+++ b/Marker/index.html
@@ -11,7 +11,7 @@
   <a-scene  arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
   embedded
   renderer="logarithmicDepthBuffer: true;"
-  vr-mode-ui="enabled: false"
+  vr-mode-ui="enabled: true"
   gesture-detector
   id="scene">
 
@@ -29,7 +29,7 @@
       <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker> -->
     <a-marker preset="hiro">
-      <a-entity position="0 0 0" scale="0.005 0.005 0.005" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.001; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="0.05 0.05 0.05" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.01; maxScale: 5"></a-entity>
     </a-marker>
 
     <!-- <a-marker preset="kanji">
@@ -37,13 +37,13 @@
     </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/night/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/night/scene.gltf" gesture-handler="minScale: 1; maxScale: 2"></a-entity>
     </a-marker>
 
 
 
     <a-marker preset="kanji">
-      <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.1; maxScale: 2"></a-entity>
     </a-marker>
 
 
