--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>A</title>
+  <title>BB</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -29,7 +29,7 @@
       <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker> -->
     <a-marker preset="hiro">
-      <a-entity position="0 0 0" scale="0.05 0.05 0.05" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 0.01; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="0.05 0.05 0.05" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 1; maxScale: 5"></a-entity>
     </a-marker>
 
     <!-- <a-marker preset="kanji">
@@ -37,7 +37,7 @@
     </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/night/scene.gltf" gesture-handler="minScale: 1; maxScale: 2"></a-entity>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/starry_night_diorama_tilt_brush/scene.gltf" gesture-handler="minScale: 1; maxScale: 2"></a-entity>
     </a-marker>
 
 
