--- a/Marker/index.html
+++ b/Marker/index.html
@@ -34,11 +34,13 @@
       <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
     </a-marker>
 
+    <a-marker preset='hiro'>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/starry_night_diorama_tilt_brush/scene.gltf" gesture-handler="minScale: 1; maxScale: 2"></a-entity>
+    </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-walkman.patt'>
       <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.1; maxScale: 2"></a-entity>
     </a-marker>
-
 
 
     <a-entity camera></a-entity>
