--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,49 +1,53 @@
 <html>
 
 <head>
-  <title>1</title>
+  <title>A</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 <script src="https://raw.githack.com/fcor/arjs-gestures/master/dist/gestures.js"></script>
 
 <body style="margin : 0px; overflow: hidden;">
-  <a-scene  arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
-  embedded
-  renderer="logarithmicDepthBuffer: true;"
-  vr-mode-ui="enabled: true"
-  gesture-detector
-  id="scene">
+  <a-scene arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" embedded
+    renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: true" gesture-detector id="scene">
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-pc.patt'>
-      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
+        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-gameboy.patt'>
-      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf"
+        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-telefono.patt'>
-      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf" gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+      <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf"
+        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
     <a-marker preset='custom' type='pattern' url='marker/pattern-824815.patt'>
-      <a-entity position="0 0 0" scale="0.05 0.05 0.05" gltf-model="assets/pacman/scene.gltf" gesture-handler="minScale: 1; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="0.05 0.05 0.05" gltf-model="assets/pacman/scene.gltf"
+        gesture-handler="minScale: 1; maxScale: 5"></a-entity>
     </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-thefullreflexcamera_slr_camera_4626.patt'>
-      <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf" gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
+      <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf"
+        gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
     </a-marker>
 
     <a-marker preset='hiro'>
-      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/starry_night_diorama_tilt_brush/scene.gltf" gesture-handler="minScale: 1; maxScale: 2"></a-entity>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
+        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-walkman.patt'>
-      <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.1; maxScale: 2"></a-entity>
+      <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf"
+        gesture-handler="minScale: 0.1; maxScale: 2"></a-entity>
     </a-marker>
 
 
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+
 </html>
