--- a/Marker/index.html
+++ b/Marker/index.html
@@ -11,17 +11,17 @@
   <a-scene arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" embedded
     renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: true" gesture-detector id="scene">
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-Sin título-1.patt'>
+    <a-marker preset='hiro'>
       <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-gameboy.patt'>
+    <a-marker preset='kanji'>
       <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf"
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
-    </a-marker> -->
+    </a-marker>
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-telefono.patt'>
+    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
       <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf"
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
@@ -33,11 +33,6 @@
     <a-marker preset='custom' type='pattern' url='marker/pattern-thefullreflexcamera_slr_camera_4626.patt'>
       <a-entity position="0 0 0" scale="0.7 0.7 0.7" gltf-model="assets/retro_polaroid/scene.gltf"
         gesture-handler="minScale: 0.07; maxScale: 5"></a-entity>
-    </a-marker>
-
-    <a-marker preset='hiro'>
-      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
-        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-walkman.patt'>
