--- a/Marker/index.html
+++ b/Marker/index.html
@@ -16,18 +16,16 @@
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
-    <a-marker preset='kanji'>
-      <a-entity position="0 0 0" scale="0.1 0.1 0.1" gltf-model="assets/yellow_gameboy/scene.gltf"
+    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
+      <a-entity position="0 0 0" scale="1 1 1" gltf-model="assets/yellow_gameboy/scene.gltf"
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
-      <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf"
-        gesture-handler="minScale: 0.1; maxScale: 2"></a-entity>
-      
+    <a-marker preset="kanji">
+      <a-entity position="0 0 0" scale="0.6 0.6 0.6" gltf-model="assets/walkman/scene.gltf" gesture-handler="minScale: 0.1; maxScale: 2"></a-entity>
     </a-marker>
 
-    <a-marker preset='custom' type='pattern' url='marker/pattern-824815.patt'>
+    <!-- <a-marker preset='custom' type='pattern' url='marker/pattern-824815.patt'>
       <a-entity position="0 0 0" scale="0.05 0.05 0.05" gltf-model="assets/pacman/scene.gltf"
         gesture-handler="minScale: 1; maxScale: 5"></a-entity>
     </a-marker>
@@ -40,7 +38,7 @@
     <a-marker preset='custom' type='pattern' url='marker/pattern-walkman.patt'>
       <a-entity position="0 0 0" scale="0.5 0.5 0.5" gltf-model="assets/old_telephone/scene.gltf"
         gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
-    </a-marker>
+    </a-marker> -->
 
 
     <a-entity camera></a-entity>
