--- a/Marker/index.html
+++ b/Marker/index.html
@@ -12,8 +12,7 @@
     renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: true" gesture-detector id="scene">
 
     <a-marker preset='hiro'>
-      <a-entity position="0 0 0" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
-        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
+      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
     </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
