--- a/Marker/index.html
+++ b/Marker/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>R</title>
+  <title>AA</title>
 </head>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -12,7 +12,8 @@
     renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: true" gesture-detector id="scene">
 
     <a-marker preset='hiro'>
-      <a-entity position="0 0 -1" scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"></a-entity>
+      <a-entity position="0 0 0" rotation scale="3 3 3" gltf-model="assets/retro_computer/scene.gltf"
+        gesture-handler="minScale: 0.05; maxScale: 2"></a-entity>
     </a-marker>
 
     <a-marker preset='custom' type='pattern' url='marker/pattern-marker.patt'>
